# crucible

./: .env  .gitignore  .iex.exs  README.md  checksum-Elixir.Crucible.Native.exs  mix.exs
.github/workflows/: release.yml
config/: dev.exs
lib/: crucible.ex  igniter_js.ex  native.ex
lib/crucible/: imports.ex  symbols.ex
native/crucible/: Cargo.toml  README.md  plan.md
native/crucible/src/: errors.rs  imports.rs  lib.rs  semantic_imports.rs  symbols.rs  types.rs  utils.rs
scripts/: local_run.sh
test/: crucible_test.exs
