[package]
name = "crucible"
version = "0.1.0"
authors = ["Abhishek Tripathi <abhishek.tripathi456@gmail.com>"]
edition = "2021"

[lib]
name = "crucible"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
oxc_allocator = "0.32.0"
oxc_parser = "0.32.0"
oxc_ast = {version = "*", features = ["serialize"]}
oxc_span = "0.32.0"
serde ={ version = "1.0",features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.90"
thiserror = "1.0.64"
